--- a/CalculatorAndroid-master/app/src/main/AndroidManifest.xml
+++ b/CalculatorAndroid-master/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/calc_g"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BinarayCalc" android:parentActivityName=".MainActivity">
+        <activity android:name=".BinaryCalc" android:parentActivityName=".MainActivity">
 
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
