--- a/CalculatorAndroid-master/local.properties
+++ b/CalculatorAndroid-master/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Dec 03 10:23:05 CET 2020
-sdk.dir=C\:\\Users\\Sergio\\AppData\\Local\\Android\\Sdk
+#Fri Dec 04 13:19:45 CET 2020
+sdk.dir=C\:\\Users\\USUARIO\\AppData\\Local\\Android\\Sdk
