--- a/CalculatorAndroid-master/local.properties
+++ b/CalculatorAndroid-master/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 09 20:42:24 CET 2020
-sdk.dir=C\:\\Users\\Sergio\\AppData\\Local\\Android\\Sdk
+#Fri Dec 11 09:12:07 CET 2020
+sdk.dir=C\:\\Users\\USUARIO\\AppData\\Local\\Android\\Sdk
