--- a/AplicacionSpinner2/app/build.gradle
+++ b/AplicacionSpinner2/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
+    implementation 'com.google.android.material:material:1.2.1'
 }
