--- a/CalculatorAndroid-master/local.properties
+++ b/CalculatorAndroid-master/local.properties
@@ -4,9 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Fri Dec 11 09:25:09 CET 2020
-=======
-#Fri Dec 11 09:12:07 CET 2020
->>>>>>> 26c830f50bc33b35385783edf7344f7479232a20
-sdk.dir=C\:\\Users\\USUARIO\\AppData\\Local\\Android\\Sdk
+#Sun Feb 07 02:27:17 CET 2021
+>>>>>>>=26c830f50bc33b35385783edf7344f7479232a20
+sdk.dir=C\:\\Users\\Sergio\\AppData\\Local\\Android\\Sdk
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
