--- a/AplicacionSpinner2/app/src/main/AndroidManifest.xml
+++ b/AplicacionSpinner2/app/src/main/AndroidManifest.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.personal.porti.aplicacionspinner">
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.CAMERA" />
 
     <application
+        android:requestLegacyExternalStorage="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AplicacionSpinner">
+        android:theme="@style/Theme.MaterialComponents.Light.Bridge">
 
         <activity android:name=".vistaFormulario" />
         <activity android:name=".MainActivity"
-            android:label="Formulario de ALta">
+            android:label="AplicacionSpinner">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
