--- a/AplicacionSpinner2/app/build.gradle
+++ b/AplicacionSpinner2/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation 'net.steamcrafted:materialiconlib:1.1.5'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.github.florent37:runtime-permission-kotlin:1.1.2'
+    implementation 'com.nightonke:boommenu:2.1.1'
 }
