--- a/AplicacionSpinner2/app/src/main/AndroidManifest.xml
+++ b/AplicacionSpinner2/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.Light.Bridge">
+        android:theme="@style/Theme.MaterialComponents.DayNight.Bridge">
 
         <activity android:name=".vistaFormulario" />
         <activity android:name=".MainActivity"
